Fix wrong padding of sidebar-nav-toc

--- a/source/css/_common/components/sidebar/sidebar-nav.styl
+++ b/source/css/_common/components/sidebar/sidebar-nav.styl
@@ -10,6 +10,10 @@
     display: inline-block;
     font-size: $font-size-small;
 
+    &.sidebar-nav-overview {
+      margin-left: 10px;
+    }
+
     &:hover {
       color: $sidebar-nav-hover-color;
     }
@@ -22,16 +26,6 @@
     &:hover {
       color: $sidebar-highlight;
     }
-  }
-}
-
-.page-post-detail {
-  .sidebar-nav-toc {
-    padding: 0 5px;
-  }
-
-  .sidebar-nav-overview {
-    margin-left: 10px;
   }
 }
 
